# OpenQuant

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  RESULTS.md  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
configs/: data_sources.example.yaml  risk.yaml  trading.example.yaml  universe.yaml
configs/launchd/: com.openquant.daily.plist.example
configs/strategies/: cta_dual_thrust.yaml  event_earnings_drift.yaml  mf_diverse.yaml  mf_diverse_neutral.yaml  mf_earnings_pead.yaml  mf_earnings_yjyg.yaml  mf_lhb.yaml  mf_lhb_reverse.yaml  mf_lowvol_alpha.yaml  mf_ml_2025.yaml  mf_ml_full.yaml  mf_ml_lgb.yaml  mf_ml_neutral.yaml  mf_ml_strict.yaml  mf_ml_strict_cat.yaml  mf_ml_strict_ensemble.yaml  mf_ml_strict_ensemble_xgb_heavy.yaml  mf_ml_strict_mini.yaml  mf_ml_strict_mini_B.yaml  mf_ml_strict_mini_C.yaml  mf_ml_strict_mini_with_agents.yaml  mf_ml_strict_with_agents.yaml  mf_ml_strict_xgb.yaml  mf_ml_strict_xgb_ma200.yaml  mf_ml_strict_xgb_neutralized.yaml  mf_ml_strict_xgb_top50.yaml  mf_ml_strict_xgb_voltarget.yaml  mf_oos_neutral.yaml  mf_oos_validated.yaml  mf_top_alpha.yaml  mf_value_momentum.yaml
docs/: ARCHITECTURE.md  ROADMAP_TO_LIVE.md  WEB_ARCHITECTURE.md
infra/clickhouse/: config.xml
infra/postgres/: init.sql
infra/prometheus/: prometheus.yml
notebooks/: 01_quickstart.ipynb
scripts/: agents_smoke_test.py  build_earnings_factor.py  build_lhb_factor.py  build_yjyg_factor.py  check_alerts.py  daily_paper_cron.sh  eval_agents.py  factor_screen.py  fix_stock_basic.py  paper_daily.py  paper_trade.py  probe_akshare.py  refresh_universe.py  sync_2020_2021.py  sync_2025_2026.py  sync_daily_basic.py  sync_earnings.py  sync_hs300_extend.py  sync_hs300_top50.py  sync_lhb.py  sync_north_flow.py  sync_real_data.py  sync_today_em.py  sync_yjyg.py  sync_zz1000.py  sync_zz500.py  train_bear_2022_stress.py  train_ml_composite.py  train_strict_holdout.py  train_strict_holdout_cat.py  train_strict_holdout_xgb.py  walk_forward.py
src/open_quant/: __init__.py  alerts_db.py  cli.py  execution.py  monitor.py  paper_state.py  pipelines.py  strategies.py
src/uni_quant/: __init__.py  cli.py  execution.py  monitor.py  pipelines.py  portfolio.py  strategies.py
tests/: test_agents.py  test_open_quant.py  test_uni_quant.py
web/: .env.example  Caddyfile.dev  README.md  docker-compose.dev.yml
web/backend/: alembic.ini
web/frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
(+116 files in other folders)
