[project]
name = "open-quant"
version = "0.1.0"
description = "A-share industrial-grade quantitative trading system"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "open-quant" }]

dependencies = [
    # core
    "numpy>=1.26",
    "pandas>=2.2",
    "polars>=1.0",
    "pyarrow>=15.0",
    "duckdb>=1.0",
    "numba>=0.59",
    "scipy>=1.13",
    # data sources
    "tushare>=1.4",
    "akshare>=1.13",
    "requests>=2.32",
    "tenacity>=8.3",
    # storage
    "clickhouse-connect>=0.7",
    "psycopg[binary]>=3.1",
    "sqlalchemy>=2.0",
    # research / quant
    "alphalens-reloaded>=0.4",
    "empyrical-reloaded>=0.5",
    "cvxpy>=1.5",
    "riskfolio-lib>=6.0",
    "statsmodels>=0.14",
    "scikit-learn>=1.5",
    "lightgbm>=4.3",
    "xgboost>=2.0",
    "vectorbt>=0.26",
    # infra
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "loguru>=0.7",
    "typer>=0.12",
    "rich>=13.7",
    "prefect>=3.0",
    "prometheus-client>=0.20",
    "apscheduler>=3.10",
    "httpx>=0.27",
    "jinja2>=3.1",
    # reports
    "matplotlib>=3.8",
    "plotly>=5.22",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "structlog>=24.1",
    "slowapi>=0.1.9",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.1",
]
live = [
    # QMT/MiniQMT - xtquant is shipped with QMT client, install from the QMT install dir
    "vnpy>=3.9",
    "vnpy_ctp>=6.7",
]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "mypy>=1.10",
    "ipykernel>=6.29",
    "jupyterlab>=4.2",
]

[project.scripts]
open-quant = "open_quant.cli:app"

[build-system]
requires = ["hatchling>=1.20", "editables>=0.5"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/open_quant"]

[tool.ruff]
line-length = 110
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]              # so `import open_quant` works without install
addopts = "-ra -q --strict-markers"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
